<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="register">No account? Register <font color='#01C6DB'>here.</font></string>
    <string name="app_name">BuildingBlocksHR</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="bbhrBrowser">Taking you to BBRH website</string>
    <string name="helpMsg">Instructions on how to use the App go here!</string>
    <string name="OkMsg">Yes!</string>
    <string name="policy"><u>Policies      </u></string>
    <string name="compliance">Compliance Policies</string>
    <string name="violance_harassment">Viloence, Workplace and Sexual Harassment</string>
    <string name="aoda">AODA</string>
    <string name="health_safety">Health and Safety</string>
    <string name="privacy">Privacy and Personal information</string>
    <string name="other_policies">Other Policies</string>
    <string name="vacation">Vacation</string>
    <string name="benefits">Benefits</string>
    <string name="loading">Just a moment...</string>
    <string name="violence_policy_heading"><u>Violence in the Workplace Policy</u></string>
    <string name="scope_heading">Applicability and Scope</string>
    <string name="scope">This policy applies to all the company employees, including temporary employees and independent contractors.</string>
    <string name="policyIntent_heading">Policy Intent</string>
    <string name="intentp1">The company recognizes that every person is entitled to a safe work environment that is free of violence and threatening behaviour.</string>
    <string name="applicability_heading">Applicability</string>
    <string name="prescription">• 80%</string>
    <string name="deductible">Deductible</string>
    <string name="deductible_1">• None</string>
    <string name="hospital_heading">Hospital</string>
    <string name="hospital_1">• 100% Semi-private room</string>
    <string name="paramedical_heading">Paramedical Services</string>
    <string name="paramedicl_1">• 80% reimbursement on maximum with $500.00 annually maximum per person and service.  Covered services include:</string>
    <string name="paramedical_2">\u2022 Chiropractor
        \n\u2022 Osteopath
        \n\u2022 Chiropodist
        \n\u2022 Podiatrist
        \n\u2022 Naturopath
        \n\u2022 Physiotherapist - $1,000 benefit
        \n\u2022 Psychologist or Social Worker
        \n\u2022 Speech Therapist
        \n\u2022 Occupational Therapist
        \n\u2022 Acupuncturist
        \n\u2022 Dietitian
        \n\u2022 Audiologist
        \n\u2022 Massage Therapist "</string>
    <string name="privacy_heading">Privacy and Personal Information and Electronic Documents Policy</string>
    <string name="applicability_p1">These guidelines apply to all the company employees, including temporary employees.</string>
    <string name="privacy_intent_p1">The company is committed to protecting the privacy of personal information of its clients, employees, independent contractors, funders and other stakeholders.  the company corporate policy on privacy is posted on the Company website at www.motionspecialties.com.
        \n\nEmployees’ personal information remains confidential throughout their career as well as after their employment with the company ends. Employees’ information will not be collected used or disclosed except in accordance with the guidelines of federal and provincial privacy acts.  Information
        about any employee will not be released without the employee’s authorization except where required by law.
        \n\nThe company will only collect employees’ personal information where permission is provided or if there is a potential contravention of the law or breaches of agreements or other circumstances that permit us to legally collect this information under the laws of Canada.
        \n\nThis policy is to ensure that the company is complying with the Personal Information Protection and Electronic Documents Act (PIPEDA) that outlines the protection for an employee in regards to the collection, use and disclosure of personal information </string>
    <string name="scope_of_pipeda">The Scope of the PIPEDA Act</string>
    <string name="scope_of_pipeda_p1">\n\n1.\tPIPEDA governs the collection, use and disclosure of “personal information”.
        \n<b>“Personal information”</b> is any information that identifies or can be used to identify an individual, except:
        \n\t\t\u2022\tName
        \n\t\t\u2022\tBusiness address, and
        \n\t\t\u2022\tPosition within an organization
        \n\n2.\tPIPEDA applies to every (private sector) <u>organization</u>, which collects, uses or discloses personal information <u>in the course of commercial activities (with intent to generate profits).</u></string>
    <string name="principles_of_pipeda">Principles of PIPEDA</string>
    <string name="principles_of_pipedat_p1">\n1.\tInformed consent is required for the collection, use and/or disclosure of personal information, unless an exception applies:
        \n\t\t\u2022\tConsent must be explicit for sensitive information
        \n\t\t\u2022\tImplicit consent may be given for less sensitive information
        \n\n<i>Exceptions to Consent </i>
        \n\t\t\u2022\tIf it is clearly in the individual’s interests and consent is not available in a timely way
        \n\t\t\u2022\tIf knowledge and consent would compromise the availability or accuracy of the information and collection is required to investigate a breach of an agreement or contravention of a law
        \n\t\t\u2022\tIf it is publicly available as specified in the regulations
        \n\n2.\tProper purpose is required for the collection, use and/or disclosure of personal information, even without <u>consent</u>.
        \n\nA “proper purpose” must be:
        \n\t\t\u2022\tPurpose(s) to which the individual consented
        \n\t\t\u2022\tAny purpose that a reasonable person would consider appropriate in the circumstances
        \n\t\t\u2022\tJustifiable \tMinimally intrusive
        \n\nThere are no exceptions to the requirements for a proper purpose.
        \n\n3.\tRetain personal information only for as long as it is necessary to fulfill the purpose. </string>
    <string name="employer_obligations">Employer Obligations</string>
    <string name="employer_obligations_p1">An employer’s obligations are to:
        \n\t\t\u2022\tDesignate a responsible individual to act as the officer of personal information
        \n\t\t\u2022\tHave custody and control on all personal information
        \n\t\t\u2022\ttProvide security safeguards i.e.: lock on office door, locks for filing cabinet, lock on computer
        \n\t\t\u2022\tIdentify the purpose for obtaining personal information
        \n\t\t\u2022\tLimit as necessary for agreed upon purposes \tObtain employee consent to obtain personal information
        \n\t\t\u2022\ttObtain written consent for the collection, use and disclosure of any personal health information
        \n\t\t\u2022\tOnly use personal information for the purposes for which it was originally collected, except with consent or if required by law
        \n\t\t\u2022\tEnsure personal information is accurate, complete and up-to date
        \n\t\t\u2022\tProvide employees access to their personal information, if requested, and correct any incorrect information </string>
    <string name="employee_rights">Employee Rights</string>
    <string name="employee_rights_p1">\n\t\t\u2022\tProvide or withhold consent
        \n\t\t\u2022\tBe given sufficient information on how information will be disclosed
        \n\t\t\u2022\tTo know their rights
        \n\t\t\u2022\tTo have access to their information
        \n\t\t\u2022\tTo challenge the accuracy and completeness of personal information </string>
    <string name="access_to_info">Access Rights to Personal Information</string>
    <string name="access_to_info_p1">\n<b>Employers</b>
        \n\t\t\u2022\tRespond to an individual’s request within a reasonable time and at minimal or no cost to the individual
        \n\t\t\u2022\tInformation shall be provided or made available to the employee in a form that is generally understandable, for example: if the organization uses abbreviations or codes to record information, an explanation should be provided
        \n\t\t<u>Exceptions:</u>
        \n\t\t\u2022\tReasons for denying access should be provided to the individual upon request
        \n\t\t<u>Exceptions may include: </u>
        \n\t\t\u2022\tInformation that is prohibitively costly to provide \tInformation that refers to other people
        \n\t\t\u2022\tInformation that cannot be disclosed for legal, security, or commercial proprietary reasons
        \n\t\t\u2022\tInformation that is subject to solicitor-client or litigation privilege
        \n\n<b>Employees </b>
        \n\t\t\u2022\tShould be told about existence, use and disclosure of personal information
        \n\t\t\u2022\tShall be given access to that information
        \n\t\t\u2022\tCan challenge the accuracy and completeness of the information and have it changed "</string>
    <string name="right_of_correction">Right of Correction to Personal Information</string>
    <string name="right_of_correction_p1">\n<b>Employee</b>
        \n\t\t\u2022\tMust successfully demonstrate the inaccuracy or incompleteness of personal information
        \n\n<b>Employer</b>
        \n\t\t\u2022\tShall amend the information as required
        \n\t\t\u2022\tWhere appropriate, shall transmit information to third parties having access to the information in question
        \n\n<b>Information Management</b>  Organizations are also required to produce a public statement informing the public of:
        \n\t\t\u2022\tThe types of information collected, used and disclosed and why \tExplanation of company’s privacy policies and procedures including access process
        \n\t\t\u2022\tInformation made available to related companies
        \n\t\t\u2022\tSecurity measures in place to safeguard information
        \n\t\t\u2022\tContact name of Chief Privacy Officer (documented on the company website)</string>
    <string name="personal_info">Personal Information</string>
    <string name="personal_info_p1">\nPersonal information <b>includes:</b>
        \n\t\t\u2022\tPersonal health information (which will only be collected for workers compensation and disability cases.  <b>This information will be collected and maintained by the Privacy Officer – Human Resources)</b>
        \n\t\t\u2022\tInformation that relates to the work performance of the individual
        \n\t\t\u2022\tInformation about professional wrongdoing, misconduct, or disciplinary matters
        \n\nPersonal information could also likely include (but is not limited to):
        \n\t\t\u2022\tAge
        \n\t\t\u2022\tWeight
        \n\t\t\u2022\tHeight
        \n\t\t\u2022\tMedical records
        \n\t\t\u2022\tIdentification numbers
        \n\t\t\u2022\tIncome
        \n\t\t\u2022\tEthnic origin
        \n\t\t\u2022\tBlood type
        \n\t\t\u2022\tOpinions, evaluations, comments, social status or disciplinary action
        \n\t\t\u2022\tEmployee files
        \n\t\t\u2022\tCredit records
        \n\t\t\u2022\tLoan records
        \n\nPersonal information <b>excludes:</b>
        \n\t\t\u2022\tName, title and employee’s contact information at Motion Specialties
        \n\n<b><u>Employee Client Personal Information </u></b>
        \n\t\t\u2022\tEmployee personal information that is provided to the company as data collection from a client is also protected under PIPEDA.\n\n  </string>
    <string name="please_contact_hr">\n<b>Please contact Human Resources should you require additional information.\n\n\n</b></string>
</resources>