<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PrivacyPolicyActivity">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="382dp"
            android:layout_height="65dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/privacy_heading"
            android:textAlignment="center"
            android:textColor="#47189C"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="93dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="Effective Date:"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/date"
            android:layout_width="87dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="January 1, 2022"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            tools:ignore="MissingConstraints" />

<!-- divider line-->
        <View
            android:id="@+id/primerdivisor"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#3F51B5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/applicability_heading"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.030"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primerdivisor" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/applicability_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/policyIntent_heading"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/privacy_intent_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

<!-- policy scope -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/scope_of_pipeda"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/scope_of_pipeda_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <!-- principiles-->
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/principles_of_pipeda"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/principles_of_pipedat_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

<!-- Obligations-->
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/employer_obligations"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/employer_obligations_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/employee_rights"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/employee_rights_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/access_to_info"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/access_to_info_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/right_of_correction"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/right_of_correction_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/personal_info"
            android:textColor="#2196F3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/personal_info_p1"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <View
            android:id="@+id/end_primerdivisor"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#3F51B5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView20"
            />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_light"
            android:text="@string/please_contact_hr"
            android:textColor="#201D1D"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/end_primerdivisor"
            app:layout_constraintTop_toBottomOf="@+id/end_primerdivisor" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>