<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DentalActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_light"
        android:text="HR in you Hands"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/bbhr_logo" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="106dp"
        android:layout_height="22dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_light"
        android:text="HR on demand."
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#853D4B"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/medical"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="Health"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/form1"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="448dp"
        android:onClick="form1"
        android:text="Health Form 1"
        android:textColor="@color/lightblue"
        app:layout_constraintStart_toStartOf="@+id/medical"
        app:layout_constraintTop_toBottomOf="@+id/medical"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/form2"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:onClick="form2"
        android:text="Health Form 2"
        android:textColor="@color/lightblue"
        app:layout_constraintStart_toStartOf="@+id/form1"
        app:layout_constraintTop_toBottomOf="@+id/form1"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/form3"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:onClick="form3"
        android:text="HealthForm 3"
        android:textColor="@color/lightblue"
        app:layout_constraintStart_toStartOf="@+id/form2"
        app:layout_constraintTop_toBottomOf="@+id/form2"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/form4"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:onClick="form4"
        android:text="Health Form 4"
        android:textColor="@color/lightblue"
        app:layout_constraintStart_toStartOf="@+id/form3"
        app:layout_constraintTop_toBottomOf="@+id/form3"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/Prescriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="Prescriptions"
        android:textColor="@color/indigo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/medical"
        app:layout_constraintTop_toBottomOf="@+id/medical" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/prescription"
        app:layout_constraintStart_toStartOf="@+id/Prescriptions"
        app:layout_constraintTop_toBottomOf="@+id/Prescriptions" />

    <TextView
        android:id="@+id/deductible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/deductible"
        android:textColor="@color/indigo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Prescriptions"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/deductible_1"
        app:layout_constraintStart_toStartOf="@+id/deductible"
        app:layout_constraintTop_toBottomOf="@+id/deductible" />

    <TextView
        android:id="@+id/hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/hospital_heading"
        android:textColor="@color/indigo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/deductible"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/hospital_1"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/hospital" />

    <TextView
        android:id="@+id/paramedical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/paramedical_heading"
        android:textColor="@color/indigo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/hospital"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="336dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/paramedicl_1"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/paramedical" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="322dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/paramedical_2"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />


</androidx.constraintlayout.widget.ConstraintLayout>
